--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,16 @@
   opacity: 0.3
 } */
 
+*{
+  font-family: 'Montserrat', sans-serif;
+}
+
 .portada-section{
   background-color: #000;
   height: 100vh;
+
 }
+
 
 .portada-img{
   background-color: green;
@@ -30,7 +36,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 .portada-text h1{
   font-family: 'Montserrat', sans-serif;
@@ -45,9 +50,25 @@
   text-transform: uppercase;
 }
 
+.portada-text button{
+  background-color: #000;
+}
+
+.portada-text button:hover{
+  background-color: #fff;
+  color: #000
+}
+
+.texto{
+  position: absolute;
+  z-index: 1
+}
+
+
 
 .flex{
   position: absolute;
+  z-index: 0;
   width: 100%;
   height: 100vh;
   top: 0;
@@ -56,6 +77,8 @@
   align-items: center;
   justify-content: center;
 }
+
+
 
 .logo-container{
   height: 300px;
@@ -67,21 +90,43 @@
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
+.nav-logo{
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  z-index: 0;
+  padding: 30px;
+  display: flex;
+  justify-content: flex-start;
+  animation: appear 4s;
+}
+@keyframes appear {
+ 0%{
+   opacity: 0
+ }
+ 50%{
+   opacity: 0
+ }
+ 100%{
+   opacity: 1
+ }
+}
+
 .burger{
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 1;
   padding: 30px;
   display: flex;
   justify-content: flex-end;
 }
+
 .burger button{
   background-color: #000;
 }
 
 .burger button:hover{
   background-color: #fff;
-
 }
 
 .burger i{
@@ -94,10 +139,10 @@
 }
 
 .menu{
-  position: absolute;
+  position: fixed;
   height: 100vh;
   background-color: #000;
-  margin-left: -200px;
+  margin-left: -300px;
   color: #fff;
   z-index: 1;
   padding: 30px;
@@ -114,7 +159,150 @@
   margin-bottom: 30px
 }
 
-.contact-section{
+
+
+.we-section{
   background-color: #fff;
-  height: 100vh;
+  height: 1200px;
+  background-image: linear-gradient(to left bottom, #000000, #2f272f, #4d4e64, #577d9a, #59b1c4);  padding-top: 40px
+
+}
+
+.we-container{
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  align-items: center;
+}
+
+
+.we-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 100px
+}
+
+.we-left hr{
+  width: 100px;
+  background-color: #fff;
+  height: 3px;
+  position: absolute;
+  top: 90px;
+}
+
+
+.we-left .encabezado{
+  text-align: left;
+  color: #fff
+}
+
+.we-left .encabezado h2{
+  font-size: 42px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.we-left .we-text {
+  color: #fff;
+  text-align: justify;
+  display: flex;
+}
+
+.we-left .we-text p {
+  font-size: 14px;
+  margin-top: 25px
+
+}
+.we-right img{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  border-radius: 5px;
+  width: 500px
+}
+
+.we-left .encabezado p{
+  font-size: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.we-profile-container{
+
+}
+.we-profile-pic{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.we-profile-card{
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.we-profile-card i{
+  color: black
+}
+
+
+.we-profile-card h3{
+  margin-top: 20px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #000
+}
+
+.we-profile-card h4{
+  font-size: 14px;
+  font-weight: 300;
+  text-align: center;
+}
+
+
+
+
+
+.levitate {
+  animation: do-levitation 1.2s alternate ease-in-out infinite;
+}
+
+.levitate1 {
+  animation: do-levitation1 1.2s alternate ease-in-out infinite;
+}
+.levitate2 {
+  animation: do-levitation2 1.2s alternate ease-in-out infinite;
+}
+
+@keyframes do-levitation {
+  0% {
+    transform: translate(0, 0);
+
+  }
+  100% {
+    transform: translate(0, 0.5em);
+
+  }
+}
+
+@keyframes do-levitation1 {
+  0% {
+    transform: translate(0, 0);
+
+  }
+  100% {
+    transform: translate(0, -0.5em);
+
+  }
 }
